2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/mm-view.el: Require `gnus-mailcap' rather than `mailcap'.

	* lisp/nnheader.el (mm-with-unibyte-buffer): Bind `default-mc-flag'
	instead of `mc-flag'.
	(nnheader-with-unibyte-current-buffer): New macro.
	(mm-with-unibyte-current-buffer): Alias to
	`nnheader-with-unibyte-current-buffer'.
	(nnheader-guess-mime-charset): New macro.
	(mm-guess-mime-charset): Alias to `nnheader-guess-mime-charset'.
	(shell-command-to-string): New function for old Emacsen.

	* lisp/lpath.el: Don't fbind `shell-command-to-string'.

2002-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/group-alist): Abolished.
	(gnus-namazu/setup): Not set it.
	(gnus-namazu/shutdown): Removed.
	(gnus-namazu/group-prefixed-name): Handle case-insensitive file
	names by itself.

2002-02-09  NISHIDA Masakazu  <m_nisida@ca2.so-net.ne.jp>

	* lisp/gnus-namazu.el (gnus-namazu/complete-query): Relaxed the
	regexp which matches field search keywords.

2002-02-01  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* etc/gnus/gnus.xpm: Remove some garbages at the end of the file.

2002-02-03  Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnir.el (nnir-run-namazu): According to SUSv3, LC_ALL is
	prior to the other environment variables whose names are starting
	with "LC_".  So there is no need to setting them.

2002-02-03  Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnir.el (nnir-imap-default-charset): New user option.
	(nnir-run-imap): Supply the charset of a search criteria.

2002-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by Kenichi OKADA <okada@opaopa.org>

	* lisp/message.el (message-save-drafts): Override
	`mime-header-encode-method-alist'.

2002-02-01  Taiji Can  <Taiji.Can@grd.advantest.co.jp>

	* texi/gnus-ja.texi (Posting Styles): Fix typo.

2002-01-31  ARISAWA Akihiro  <ari@atesoft.advantest.co.jp>

	* lisp/gnus-art.el (gnus-article-display-traditional-message):
	Reverted.

2002-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>
